--- a/style.css
+++ b/style.css
@@ -28,28 +28,7 @@ header h1{
     letter-spacing: 25px;
 }
 
-
-
-
-
-
-
-.menu{
-    margin-top: 45px;
-    text-transform: uppercase;
-    display: flex;
-    list-style-type: none;
-    column-gap: 10%;
-    margin-left: 10px;
-}
-
-.menu a{
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-}
-
-.redes{
+img .redes{
     margin-top: 30px;
     margin-left: 200px;
     width: 150px;
@@ -57,10 +36,10 @@ header h1{
 }
 
 
-.nav-item:hover{
+nav div ul li{
     font-weight: 800;
 }
-.dropdown-item:hover{
+nav div ul li:hover{
     font-weight: 800;
 }
 
