--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,13 @@
+@charset "UTF-8";
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
   display: flex;
-  padding: 20px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 40px;
   opacity: 90%;
   background-color: rgb(247, 247, 247);
 }
@@ -14,22 +17,22 @@ header img {
 }
 header a {
   text-decoration: none;
+  color: inherit;
 }
 header a h1 {
-  margin-left: 50px;
-  margin-top: 30px;
-  margin-right: 50px;
+  margin: 0;
+  text-align: center;
   font-size: 40px;
   letter-spacing: 25px;
 }
 header .redes {
-  margin-top: 30px;
-  margin-left: 200px;
+  display: flex;
+  align-items: center;
   width: 150px;
   height: 50px;
 }
 header nav div ul li {
-  font-weight: 800;
+  font-weight: 500;
 }
 header nav div ul li:hover {
   font-weight: 800;
@@ -352,14 +355,31 @@ main section h2 {
   }
 }
 footer {
+  grid-template-areas: "telefono año localidad" "redes redes redes";
   text-align: center;
-  margin-top: 20px;
-  display: block;
+  justify-items: center;
+  margin-top: 40px;
+  display: grid;
   background-color: rgb(196, 196, 196);
   padding: 15px;
 }
-footer nav {
-  margin-left: 290px;
+footer h4 {
+  font-size: 15px;
+}
+footer .telefono {
+  grid-area: telefono;
+}
+footer .año {
+  grid-area: año;
+}
+footer .localidad {
+  grid-area: localidad;
+}
+footer img {
+  grid-area: redes;
+  width: 160px;
+  height: auto;
+  margin-right: 40px;
 }
 
 .wpp {
